cabal-version: 2.2

name:           ConsoleAsk
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/ConsoleAsk#readme>
homepage:       https://github.com/t-sasaki915/ConsoleAsk#readme
bug-reports:    https://github.com/t-sasaki915/ConsoleAsk/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/ConsoleAsk

library
  exposed-modules:
      System.Console.Ask.Askable
      System.Console.Ask.Behaviour
      System.Console.Ask.Internal
      System.Console.Ask
  other-modules:
      Paths_ConsoleAsk
  autogen-modules:
      Paths_ConsoleAsk
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , text ==2.1.2
    , regex-posix ==0.96.0.2
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes

executable ConsoleAsk-exe
  main-is: Main.hs
  other-modules:
      Paths_ConsoleAsk
  autogen-modules:
      Paths_ConsoleAsk
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ConsoleAsk
    , base >=4.7 && <5
    , text ==2.1.2
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
